[FIX] Fixed the alignment issue with the about-us category

--- a/css/style.css
+++ b/css/style.css
@@ -844,6 +844,8 @@ figure img {
 .introtext {
   margin-left: 20px;
   margin-right: 20px;
+  max-width: 100%;
+  text-align: justify;
 }
 
 .first-article {
